--- a/demo1.html
+++ b/demo1.html
@@ -15,6 +15,7 @@
             <li class="fa fa-moon-o"></li>
             <li class="fa fa-moon-o"></li>
             <li class="fa fa-moon-o"></li>
+            <li>生活的七彩虹!</li>
         </ol>
         <h2>告诉我你的满意程度……</h2>
         <p class='net'></p>
